<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/account"
            android:icon="@drawable/ic_account"
            android:title="@string/acc">
        </item>
    </group>


    <item android:title="@string/opt">
        <menu>
            <item android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact"
                android:title="@string/contact">
            </item>

            <item android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout">
            </item>
        </menu>
    </item>

</menu>