<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RegisterActivity"
    tools:showIn="@layout/activity_register"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword|numberPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:selectAllOnFocus="true"
            app:layout_constraintTop_toBottomOf="@+id/password"
            tools:layout_editor_absoluteX="-16dp" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            tools:layout_editor_absoluteX="-16dp" />

        <EditText
            android:id="@+id/street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/addr1"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            app:layout_constraintTop_toBottomOf="@+id/mail"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/addr2"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            app:layout_constraintTop_toBottomOf="@+id/street"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/register_bday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:inputType="date"
            app:layout_constraintTop_toBottomOf="@+id/city"
            tools:layout_editor_absoluteX="0dp"
            tools:text="@string/b_day" />

        <EditText
            android:id="@+id/zipcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginBottom="1dp"
            android:ems="10"
            android:hint="@string/addr3"
            android:inputType="number"
            android:selectAllOnFocus="true"

            app:layout_constraintTop_toBottomOf="@+id/register_bday"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/zipcode"
            android:textSize="22sp"
            tools:layout_editor_absoluteY="624dp" />

        <EditText
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/question"
            android:inputType="textPersonName"
            android:hint="@string/answer"
            />

        <Button
            android:id="@+id/registeracc"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
            android:layout_width="318dp"
            android:layout_height="79dp"
            android:layout_marginTop="32dp"
            android:background="@color/good"
            android:text="@string/button_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answer" />
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>