<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BillingActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <Button
        android:id="@+id/planpay"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="@color/good"
        android:text="@string/bill_confirm"
        android:textColor="@color/white"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/bill_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:inputType="date"
        android:selectAllOnFocus="true"
        android:text="@string/bill_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_spinner" />

    <EditText
        android:id="@+id/pbs_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:text="@string/bill_pbs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bill_amount" />

    <EditText
        android:id="@+id/bill_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:text="@string/bill_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bill_date" />

    <Spinner
        android:id="@+id/account_spinner"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/label_accounts"
        android:layout_width="174dp"
        android:layout_height="21dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="4dp"
        android:text="@string/acc"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/account_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>