<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/d_layout"
android:fitsSystemWindows="true"
tools:context=".MainActivity">



    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <EditText
            android:id="@+id/usern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/button_login"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="38dp"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usern" />

        <Button
            android:id="@+id/button_login"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="95dp"
            android:layout_height="48dp"
            android:layout_marginStart="188dp"
            android:layout_marginTop="52dp"
            android:text="@string/button_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <Button
            android:id="@+id/main_recover_pass"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="92dp"
            android:text="@string/request_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/request_account" />

        <Button
            android:id="@+id/request_account"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="135dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="52dp"
            android:text="@string/button_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.DrawerLayout>